Fixed information div No real solution just fresh eyes text and boxes do not align perfectly yet

--- a/style.css
+++ b/style.css
@@ -96,11 +96,16 @@ ul {
 }
 
 .infoheading {
-    align-items: center;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 16px;
 }
 
 .infoboxes {
     display: flex;
+    justify-content: space-evenly;
+    padding: 16px;
+    ;
     
 }
 
